# qara_old

./: .gitignore  .taplo.toml  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crates/qara_app/: Cargo.toml
crates/qara_app/src/: action.rs  app.rs  audio.rs  components.rs  lib.rs  mode.rs  nyaa.rs  player.rs  vo.rs
crates/qara_app/src/components/: common.rs  downloaded_items.rs  items.rs  search.rs  selected_item.rs
crates/qara_app/src/components/common/: input.rs  popup.rs
crates/qara_video/: Cargo.toml
crates/qara_video/src/: lib.rs  video.rs
src/: main.rs
